[gd_scene load_steps=5 format=2]

[ext_resource path="res://ASSETS/enemies/paulok.png" type="Texture" id=1]
[ext_resource path="res://scripts/characters/Paulok.gd" type="Script" id=2]
[ext_resource path="res://ASSETS/sounds/paulok_cry.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.6003, 63.1542 )

[node name="Paulok" type="KinematicBody2D"]
scale = Vector2( 1.7, 1.7 )
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.94118 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]
scale = Vector2( 1, 1 )
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hitbox"]
polygon = PoolVector2Array( -0.209961, 0.218999, -42.6324, 65.916, -43.4578, 47.2634, -52.0222, 65.4117, -71.4069, 65.5589, -60.4597, 41.651, -63.7611, 38.0196, -63.2659, 32.4072, -60.4597, 30.5915, -50.3906, 1.70461, -44.118, -3.08236, -27.6112, -8.5296, -15.2311, -10.3453, -15.3696, -22.0041, -18.3341, -22.7453, -22.0397, -37.1973, -12.4051, -63.1369, 3.8998, -67.2131, 24.6514, -60.5429, 30.5805, -52.3905, 29.0982, -37.5679, 15.0167, -8.29324, 48.7382, 9.86445, 66.8959, 45.8092, 71.499, 65.5525, 52.2616, 65.3966, 36.8801, 50.256, 35.3978, 65.0786 )

[node name="PaulokCrySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0

[node name="LanceKiyu" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="finished" from="PaulokCrySound" to="." method="_on_PaulokCrySound_finished"]
[connection signal="timeout" from="LanceKiyu" to="." method="_on_LanceKiyu_timeout"]
